testbed/test/cruise/compiler/expected/Main3.txt
Main3.ump:7: error: cannot find symbol
        b = a;
        ^
  symbol:   variable b
  location: class Main3
1 error
